# homelab

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: 01-prerequisites.md  02-proxmox-and-talos.md  03-gitops-bootstrap.md  04-cloudflare-tunnel.md  05-talos-extensions.md  06-talosctl-cheatsheet.md  index.md
infra/ansible/: ansible.cfg  bootstrap.yml  inventory.ini  pyproject.toml
infra/ansible/roles/argocd_bootstrap/tasks/: main.yml
infra/metallb/: ip_pool.yaml
infra/talos/extension-services/: cloudflared.yaml.example  tailscale.yaml.example
infra/terraform/: .terraform.lock.hcl  image.tf  outputs.tf  providers.tf  talos.tf  terraform.tfvars.example  variables.tf  versions.tf  vm.tf
infra/terraform/patches/: controlplane.yaml.tftpl
kubernetes/apps/: README.md  kustomization.yaml
kubernetes/apps/argocd-config/: README.md  argocd-cm.yaml  argocd-cmd-params-cm.yaml  argocd-config-app.yaml  argocd-ingress.yaml  argocd-rbac-cm.yaml  github-oauth-sealedsecret.yaml  kustomization.yaml  reseal-github-oauth.sh
kubernetes/apps/traefik/: kustomization.yaml  traefik-app.yaml
kubernetes/apps/webserver/: application.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
kubernetes/bootstrap/: root-app.yaml
scripts/: install-tools.sh
